k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vonage-to-matrix
    type: rust
  name: vonage-to-matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vonage-to-matrix
      type: rust
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vonage-to-matrix
        type: rust
    spec:
      containers:
        - name: vonage-to-matrix
          image: kchudy/vonage-to-matrix:main
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /opt/config.toml
              name: config-volume
              subPath: config.toml
      volumes:
        - name: config-volume
          configMap:
            name: vonage-to-matrix-config
