k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vonage-to-matrix
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: vonage-to-matrix
    type: rust
  type: ClusterIP
