k8s/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vonage-to-matrix
spec:
  ingressClassName: traefik
  rules:
  - host: vonage.teonite.net
    http:
      paths:
      - backend:
          service:
            name: vonage-to-matrix
            port:
              number: 80
        path: /
        pathType: Prefix
